# matrix-rust-sdk

./: Cargo.toml
crates/matrix-sdk-crypto/src/machine/: mod.rs
crates/matrix-sdk-rtc/: Cargo.toml
crates/matrix-sdk-rtc-livekit/: Cargo.toml
crates/matrix-sdk-rtc-livekit/src/: element_call.rs  lib.rs  matrix_keys.rs  per_participant.rs
crates/matrix-sdk/src/widget/: capabilities.rs  element_call.rs  mod.rs
examples/: README.md
examples/rtc_livekit_join/: Cargo.toml  README.md  inputmapping.json
examples/rtc_livekit_join/src/: AppState.rs  BotConfig.rs  InputMapping.rs  main.rs  utils.rs  videosource.rs
