[package]
name = "example-rtc-livekit-join"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[package.metadata.release]
release = false

[[bin]]
name = "example-rtc-livekit-join"
test = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
mime.workspace = true
matrix-sdk = { path = "../../crates/matrix-sdk", default-features = false }
matrix-sdk-base = { path = "../../crates/matrix-sdk-base" }
matrix-sdk-crypto = { path = "../../crates/matrix-sdk-crypto" }
matrix-sdk-rtc = { path = "../../crates/matrix-sdk-rtc", default-features = false }
matrix-sdk-rtc-livekit = { path = "../../crates/matrix-sdk-rtc-livekit", default-features = false }
reqwest.workspace = true
ruma.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
v4l = { version = "0.14", optional = true }
rand = { version = "0.8.0" }
zeromq = { version = "0.4", default-features = false, features = ["tcp-transport", "tokio-runtime"] }
jpeg-decoder = "0.3"
axum = "0.8.1"
pulldown-cmark = "0.9"
once_cell = "1.20.3"

[lints]
workspace = true

[features]
default = []
rustls-tls = ["matrix-sdk/rustls-tls", "matrix-sdk-rtc/rustls-tls", "matrix-sdk-rtc-livekit/rustls-tls"]
native-tls = ["matrix-sdk/native-tls", "matrix-sdk-rtc/native-tls", "matrix-sdk-rtc-livekit/native-tls"]
v4l2 = ["dep:v4l"]
e2e-encryption = ["matrix-sdk/e2e-encryption"]
e2ee-per-participant = ["matrix-sdk-rtc-livekit/crypto", "matrix-sdk/experimental-send-custom-to-device"]
experimental-widgets = ["matrix-sdk/experimental-widgets"]
sqlite = ["matrix-sdk/sqlite"]
